# stunning-goggles

./: .gitignore
djs/analysis/: __init__.py  _base.jsonl  analyze.ipynb
djs/dataset-conversion/: .gitignore  main.py
djs/dataset-eval/: eval.py  load_zip.py  results-0-4.json  traintest.py
djs/dataset-eval/results/: 0-4-2024-12-14T21:17:43+00:00.json  0-4-2024-12-14T23:12:49.jsonl  128-256-2024-12-15T00:19:50.jsonl  16-32-2024-12-14T23:27:45.jsonl  256-512-2024-12-15T01:48:24.jsonl  32-128-2024-12-14T23:35:48.jsonl  4-8-2024-12-14T22:21:14+00:00.json  4-8-2024-12-14T22:21:14.jsonl  4-8.json  8-16-2024-12-14T22:32:11.jsonl  _finetune.jsonl  _qualitative.md  concat_results.py  finetune-0-4-2024-12-15T05:01:00.jsonl  finetune-154-164-2024-12-15T08:43:22.jsonl  finetune-164-236-2024-12-15T15:48:49.jsonl  finetune-236-237-2024-12-15T16:34:14.jsonl  finetune-237-238-2024-12-15T16:38:01.jsonl  finetune-238-247-2024-12-15T16:40:56.jsonl  finetune-247-269-2024-12-15T17:18:11.jsonl  (+10 more)
djs/dataset-label/: __init__.py  output.jsonl
mondo/bugswarm/: .mise.toml
mondo/bugswarm-data/: .gitignore  .mise.toml  Makefile  README.md  pyproject.toml
mondo/bugswarm-data/src/: consts.py
mondo/bugswarm-data/src/downloader/: download_list.py  main.py
mondo/bugswarm-data/src/downloader/cmd/: clean_data_dir.py  download_list.py  download_logs.py  run_diff.py
mondo/bugswarm-data/src/downloader/typing/: bugswarm.py
mondo/bugswarm-data/src/notebook/: data-features.ipynb
mondo/bugswarm-data/src/preprocess/cmd/: cleaner.py  export_json.py  log_merger.py  run_diff.py  run_diff_merged.py  run_diff_raw.py
mondo/fine_tune/: .gitignore  dataloader.py  inference.py  train.py
mondo/llama-3.2-1b-unsloth/: .mise.toml  environment.yml  main.py
report/: main.bib  main.typ
report/final/: appendix.typ  main.bib  main.typ
report/template/: neurips2024.typ
(+10 files in other folders)
