[tool.poetry]
name = "bugswarm-data"
version = "0.1.0"
description = ""
authors = ["Mondo <mondogao@gmail.com>"]
readme = "README.md"
packages = [{include = "downloader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
bugswarm-common = "^2024.8.26"
ratelimit = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
list = "downloader.cmd.download_list:main"
logs = "downloader.cmd.download_logs:main"
