[tool.poetry]
name = "bugswarm-data"
version = "0.1.0"
description = ""
authors = ["Mondo <mondogao@gmail.com>"]
readme = "README.md"
packages = [{include = "downloader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
bugswarm-common = "^2024.8.26"
ratelimit = "^2.2.1"
orjson = "^3.10.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
list = "downloader.cmd.download_list:main"
logs = "downloader.cmd.download_logs:main"
diff_raw = "preprocess.cmd.run_diff_raw:main"
clean = "downloader.cmd.clean_data_dir:main"

# new, sequence
clean_logs = "preprocess.cmd.cleaner:main"
merge = "preprocess.cmd.log_merger:main"
diff = "preprocess.cmd.run_diff_merged:main"

export = "preprocess.cmd.export_json:main"